--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
           <div class="description">
             <article>
               <p>
-                Hi there! I'm <strong>Gus Jabung Al Fiansyah</strong>, a
+                Hi there! I'm <strong>Muhammad filly andi Barbara </strong>, a
                 22-year-old from Wonosobo, Indonesia. I'm into software
                 engineering, currently studying computer science, and I'm
                 passionate about Web Development.
